# my_rust_example

./: .gitignore
example1/: Cargo.toml
example1/egui/: Cargo.toml
example1/egui/src/: event.rs
example1/egui/src/dbaccess/: pet.rs
example1/egui/src/http/: http.rs
example1/egui/src/models/: http.rs  mod.rs  pet.rs
example1/egui/src/sql/: pet.sql
